--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,13 +59,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Player\Player.cs" />
     <Compile Include="Assets\Scripts\CityPopup.cs" />
     <Compile Include="Assets\Scripts\ConversationTemplate.cs" />
     <Compile Include="Assets\Scripts\FirstInteractionWithDick.cs" />
+    <Compile Include="Assets\Scripts\Globals.cs" />
     <Compile Include="Assets\Scripts\MakeButton.cs" />
     <Compile Include="Assets\Scripts\MAP.cs" />
     <Compile Include="Assets\Scripts\TomConvo1.cs" />
     <Compile Include="Assets\Scripts\Tooltip.cs" />
+    <Compile Include="Assets\UI Stuff\MenuController.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Users/asnodgrass3551/Documents/GitHub/CompSci5-6Project/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
