--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\Scripts\Navmesh Test.cs" />
     <Compile Include="Assets\Scripts\player2D.cs" />
     <Compile Include="Assets\Scripts\TomConvo1.cs" />
+    <Compile Include="Assets\Scripts\TomProx2D.cs" />
     <Compile Include="Assets\Tilemap\Brushes\Tint Brush Smooth\Scripts\TintTextureGenerator.cs" />
     <Compile Include="Assets\Tilemap\GridInformation\Scripts\GridInformation.cs" />
     <Compile Include="Assets\Tilemap\Tiles\Animated Tile\Scripts\AnimatedTile.cs" />
@@ -93,14 +94,14 @@
     <Reference Include="Unity.CollabProxy.Editor">
       <HintPath>C:/Users/sbremmer4777/Documents/CS5-6Proj/CompSci5-6Project/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
+    <Reference Include="Unity.AssetBundleBrowser.Editor">
+      <HintPath>C:/Users/sbremmer4777/Documents/CS5-6Proj/CompSci5-6Project/Library/ScriptAssemblies/Unity.AssetBundleBrowser.Editor.dll</HintPath>
+    </Reference>
     <Reference Include="Unity.TextMeshPro">
       <HintPath>C:/Users/sbremmer4777/Documents/CS5-6Proj/CompSci5-6Project/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
       <HintPath>C:/Users/sbremmer4777/Documents/CS5-6Proj/CompSci5-6Project/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
-    </Reference>
-    <Reference Include="Unity.AssetBundleBrowser.Editor">
-      <HintPath>C:/Users/sbremmer4777/Documents/CS5-6Proj/CompSci5-6Project/Library/ScriptAssemblies/Unity.AssetBundleBrowser.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
